--- a/profiles/templates/profiles/update_profile.html
+++ b/profiles/templates/profiles/update_profile.html
@@ -4,21 +4,24 @@
 
 {% block content %}
 <section>
-    <div class="d-flex align-items-center p-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm col-lg-8 col-xl-8 col-xxl-8 d-flex align-items-center justify-content-center pb-5">
-                    <p class="heading-font text-center font-size-96 mb-5">Profile Edit</p>
-                </div>
-                <div class="col-sm col-lg-4 col-xl-4 col-xxl-4 translucent-body mb-5">
-                    <form method="POST" class="p-1">
-                        {% csrf_token %}
-                        {{ form | crispy }}
-                        <br>
-                        <button class="btn btn-primary ms-auto me-3" type="submit">Save</button><a href="{{ view.get_success_url }}" class="btn btn-secondary">Cancel</a>
-                    </form>
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1 class="my-5">
+                    PROFILE / EDIT
+                </h1>
             </div>
+        </div>
+    </div>
+    <div class="d-flex flex-column justify-content-center content align-items-center p-5">
+        <div class="col-12 col-md-5 mb-5 my-auto bg-light bg-gradient rounded">
+            <h1 class="text-center p-3 fs-3">MY DETAILS</h1>
+            <form method="POST" class="p-3">
+                {% csrf_token %}
+                {{ form | crispy }}
+                <br>
+                <button class="btn btn-primary ms-auto me-3" type="submit">Save</button><a href="{{ view.get_success_url }}" class="btn btn-secondary">Cancel</a>
+            </form>
         </div>
     </div>
 </section>
