--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -50,7 +50,7 @@
                 <div class="card-body">
                   <h5 class="card-title">LEARN TO DIVE</h5>
                   <p class="card-text">Discover Scuba with us...</p>
-                  <a href="#" class="btn btn-primary">Try it now</a>
+                  <a href="{% url 'course_list' %}?level__iexact=beginner" class="btn btn-primary">Try it now</a>
                 </div>
             </div>
         </div>
@@ -60,7 +60,7 @@
                 <div class="card-body">
                   <h5 class="card-title">CONTINUE DIVING</h5>
                   <p class="card-text">Learn diving specialties and niches</p>
-                  <a href="#" class="btn btn-primary">Join us</a>
+                  <a href="{% url 'course_list' %}?level__iexact=advanced" class="btn btn-primary">Join us</a>
                 </div>
               </div>
         </div>
@@ -70,7 +70,7 @@
                 <div class="card-body">
                   <h5 class="card-title">PRO DIVING COURSES</h5>
                   <p class="card-text">Work the dream...</p>
-                  <a href="#" class="btn btn-primary">Go Pro</a>
+                  <a href="{% url 'course_list' %}?level__iexact=professional" class="btn btn-primary">Go Pro</a>
                 </div>
               </div>
         </div>
