--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -30,14 +30,14 @@
         </div>
     </div>
     <div class="row">
-        <div class="col col-md-6 {% if not product.image %}{% endif %}">
+        <div class="col-12 col-md-6 {% if not product.image %}{% endif %}">
             {% if product.image %}
             <img class="img-fluid" src="{{product.image.url}}" alt="{{product.name}}">
             {% else %}
             <p class = 'fs-4 text-center my-auto'>AWAITING IMAGE</p>
             {% endif %}
         </div>
-        <div class="col col-md-6">
+        <div class="col-12 col-md-6 mt-3 mt-md-auto">
             <h1 class="fs-2 mb-4">{{ product.name }}</h1>
             <h2 class="fs-5 my-3">{{ product.brand | upper }}</h2>
             <p class="w-lg-75 my-4">{{ product.description|linebreaks }}</p>
@@ -54,7 +54,8 @@
                         {% endfor %}
                     </select>
                     <p class="mt-3"><strong>Quantity:</strong></p>
-                    <div class="form-group w-25">
+                    
+                    <div class="form-group d-flex">
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
                                     <span class="input-group-btn">
