--- a/products/templates/products/inventory_list.html
+++ b/products/templates/products/inventory_list.html
@@ -84,7 +84,7 @@
             <td>{{ object.product }}</td>
             <td>{{ object.size }}</td>
             <td>{{ object.count }}</td>
-            <td><a class = "btn btn-primary" href="{% url 'update_inventory' object.id %}">Ajust Qty</a></td>
+            <td><a class = "btn btn-primary" href="{% url 'update_inventory' object.id %}">Adjust Qty</a></td>
           </tr>
           {% endfor %}
         </tbody>
