--- a/products/templates/products/create_product.html
+++ b/products/templates/products/create_product.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class="container content">
-    <div class="d-flex align-items-center p-5">
+    <div class="d-flex align-items-center p-md-5">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-6 pt-2">
@@ -28,7 +28,7 @@
                         alt="{{object.name}}">
                 </div>
                 <div class="col-12 col-lg-6 translucent-body mb-5">
-                    <form method="POST" class="p-1">
+                    <form method="POST" class="p-1" enctype='multipart/form-data'>
                         {% csrf_token %}
                         {{ form | crispy }}
                         <a id = "color_link" class = "btn btn-primary" href = "{% url 'color_list' %}">Colors</a>
