--- a/templates/base.html
+++ b/templates/base.html
@@ -127,6 +127,9 @@
               </ul>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{% url 'about' %}">ABOUT</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{% url 'contact' %}">CONTACT</a>
             </li>
           </ul>
@@ -255,19 +258,19 @@
         <h6 class = "fs-5">Shop</h6>
         <p>
         <a class = "text-reset text-decoration-none" href="{% url 'all_products' %}">Products</a><br>
-        <a class = "text-reset text-decoration-none" href="#">Courses</a>
+        <a class = "text-reset text-decoration-none" href="{% url 'course_list' %}">Courses</a>
         </p>
       </div>
       <div class="col-md-2">
         <h6 class = "fs-5">Information</h6>
-        <a class = "text-reset text-decoration-none" href="#">Contact</a>
-        <a class = "text-reset text-decoration-none" href="#">About</a>
+        <a class = "text-reset text-decoration-none" href="{% url 'contact' %}">Contact</a>
+        <a class = "text-reset text-decoration-none" href="{% url 'about' %}">About</a>
       </div>
       <div class="col-md-2">
         <h6 class = "fs-5">Account</h6>
         <p>
           {% if user.is_authenticated %}
-          <a class="text-reset text-decoration-none" href="{% url 'profile' user.userprofile.id %}">My Profile</a>
+          <a class="text-reset text-decoration-none" href="{% url 'profile' user.userprofile.id %}">My Profile</a><br>
           <a class = "text-reset text-decoration-none" href = "{% url 'account_logout' %}">Login</a>
           {% else %}
           <a class = "text-reset text-decoration-none" href="{% url 'account_signup' %}">Register</a><br>
