--- a/courses/templates/courses/course_form.html
+++ b/courses/templates/courses/course_form.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class="container content">
-    <div class="d-flex align-items-center p-5">
+    <div class="d-flex align-items-center p-lg-5">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-6 pt-2">
