--- a/templates/base.html
+++ b/templates/base.html
@@ -263,7 +263,7 @@
       </div>
       <div class="col-md-2">
         <h6 class = "fs-5">Information</h6>
-        <a class = "text-reset text-decoration-none" href="{% url 'contact' %}">Contact</a>
+        <a class = "text-reset text-decoration-none" href="{% url 'contact' %}">Contact</a><br>
         <a class = "text-reset text-decoration-none" href="{% url 'about' %}">About</a>
       </div>
       <div class="col-md-2">
