--- a/courses/templates/courses/course_list.html
+++ b/courses/templates/courses/course_list.html
@@ -19,7 +19,7 @@
 
 <div class="content container">
     {% for object in object_list %}
-    <div class="row d-flex {% if forloop.counter|divisibleby:2 %} flex-row-reverse {% endif %}">
+    <div class="row d-flex {% if forloop.counter|divisibleby:2 %} flex-row-reverse {% endif %} mb-3">
         <div class="col-12 col-md-6 d-flex flex-column">
             <h2>{{ object.friendly_name }}</h2>
             <p>{{ object.description | linebreaks }}</p>
@@ -31,9 +31,9 @@
         </div>
         <div class="col-12 col-md-6">
             {% if not object.image %}
-            <img src="" alt="awaiting image" class="img-responsive mt-3 w-100">
+            <img src="" alt="awaiting image" class="img-responsive my-3 w-100">
             {% else %}
-            <img src="{{ object.image.url }}" alt="{{ object.friendly_name }}" class="course-list-image img-responsive w-100 mt-3">
+            <img src="{{ object.image.url }}" alt="{{ object.friendly_name }}" class="course-list-image img-responsive w-100 my-3">
             {% endif %}
         </div>
     </div>
