--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -179,6 +179,14 @@
             </tbody>
         </table>
     </div>
+    <div class = " container d-flex flex-column align-items-end">
+        <p><strong>Delivery: ${{delivery}}</strong></p>
+        <p><strong>Grand Total: ${{grand_total}}</strong></p>
+    </div>
+    <div class = "container d-flex justify-content-end">
+        <a href="{% url 'all_products' %}" class="btn btn-dark me-2"><i class="bi bi-chevron-double-left"></i>Continue Shopping</a>
+        <a class="btn btn-primary" href="{% url 'checkout' %}">Proceed to Checkout</a>
+    </div>
     {% else %}
     <p>
         You're bag is empty.
