add testing for product views

--- a/courses/templates/courses/course_detail.html
+++ b/courses/templates/courses/course_detail.html
@@ -46,7 +46,7 @@
             <p><strong>Duration:</strong> {{ object.duration_weeks }} week</p>
             <p><strong>Price:</strong> ${{object.price}} </p>
             <div class = "align-self-start">
-            <a class="btn btn-secondary me-3" href = "../">Back</a><a class = "btn btn-primary me-3" href="{ url 'contact' }">Reserve now!</a>
+            <a class="btn btn-secondary me-3" href = "../">Back</a><a class = "btn btn-primary me-3" href="{% url 'contact' %}">Reserve now!</a>
             </div>
         </div>
     </div>
