clean up code bag and checkout

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 
+<!-- About header text -->
 <div class="container content">
     <div class="row">
         <div class="col">
@@ -12,6 +13,7 @@
         </div>
     </div>
 </div>
+<!-- About business description and image -->
 <div class="container content">
     <div class="row">
         <div class="col-12 col-lg-6">
@@ -31,6 +33,7 @@
         </div>
     </div>
 </div>
+<!-- About accordian from bootstrap showing faqs -->
 <div class="container mt-5">
     <div class="row">
         <div class="d-none d-lg-block col-3"></div>
