add background image to auth pages

--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -64,7 +64,7 @@
                             <p class="card-title fs-6"><strong>{{product.friendly_name}}</strong></p>
                         </div>
                     <ul class="list-group list-group-flush border-top-0">
-                        <li class="list-group-item border-0">£{{product.price}}</li>
+                        <li class="list-group-item border-0">$ {{product.price}}</li>
                         <li class="list-group-item border-0"><a href="{% url 'product_detail' product.slug %}" class="btn btn-light">Details</a></li>
                     </ul>
                     </div>
