--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -1,9 +1,33 @@
 {% extends "account/base.html" %}
-
+{% load static %}
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <h1>{% trans "Change Password" %}</h1>
+<div class = "col-12 col-lg-4 d-flex flex-column mt-5 p-3 auth-pages-border bg-light">
+    <div class="w-100 d-flex align-items-center">
+  <h1 class = "fs-3 text-uppercase w-75">{% trans "Change Password" %}</h1>
+  <img class = "w-25" src="{% static 'img/form-logo.webp' %}" alt="scubasport logo">
+  </div>
+    <h1></h1>
     <p>{% trans 'Your password is now changed.' %}</p>
+    </div>
 {% endblock %}
+
+
+
+
+{% load static %}
+{% load crispy_forms_tags %}
+
+<div class = "col-12 col-md-3 d-flex flex-column mt-5 rounded border border-dark p-3">
+    <div class="w-100 d-flex align-items-center">
+<h1 class = "fs-3 text-uppercase w-75">{% trans "Sign Up" %}</h1>
+<img class = "w-25" src="{% static 'img/form-logo.webp' %}" alt="scubasport logo">
+</div>
+
+
+
+
+<button class="btn btn-primary mt-3" type="submit">{% trans "Sign Up" %} &raquo;</button>
+</form>
