--- a/templates/base.html
+++ b/templates/base.html
@@ -156,7 +156,7 @@
                   <a class="dropdown-item" href="{% url 'account_login' %}"">LOGIN</a>
                 </li>
                 <li>
-                  <a class=" dropdown-item staff" href="{% url 'account_signup' %}">REGISTER</a>
+                  <a class=" dropdown-item" href="{% url 'account_signup' %}">REGISTER</a>
                 </li>
                 {% endif %}
             </li>
