--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,11 +1,16 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
 
-<div class="container vh-90 d-flex">
-    <div class="w-50 my-auto mx-auto">
+<div class="container-fluid auth-background content pb-5">
+    <div class="row">
+    <div class="d-none d-md-block col"></div>
         {% block inner_content %}
+
+
         {% endblock %}
+        <div class="d-none d-md-block col"></div>
     </div>
 </div>
 
