--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -1,13 +1,18 @@
 {% extends "account/base.html" %}
-
+{% load static %}
+{% load crispy_forms_tags %}
 {% load i18n %}
 {% load account socialaccount %}
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block inner_content %}
+<div class = "col-12 col-lg-4 d-flex flex-column mt-5 p-3 auth-pages-border bg-light bg-light">
+  <div class="w-100 d-flex align-items-center">
+<h1 class = "fs-3 text-uppercase w-75">{% trans "Sign In" %}</h1>
+<img class = "w-25" src="{% static 'img/form-logo.webp' %}" alt="scubasport logo">
+</div>
 
-<h1>{% trans "Sign In" %}</h1>
 
 {% get_providers as socialaccount_providers %}
 
@@ -35,12 +40,27 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
 <form class="login" method="POST" action="{% url 'account_login' %}">
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ form | crispy }}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a><br>
+  <button class="primaryAction btn btn-primary mt-3 ms-auto" type="submit">{% trans "Sign In" %}</button>
 </form>
+</div>
 
 {% endblock %}
+
+
+
+<div class = "d-flex flex-column mt-5 w-50 mx-auto rounded border border-dark p-3">
+  <div class="w-100 d-flex align-items-center">
+<h1 class = "fs-3 text-uppercase w-75">{% trans "Sign Up" %}</h1>
+<img class = "w-25" src="{% static 'img/form-logo.webp' %}" alt="scubasport logo">
+</div>
+
+
+
+
+<button class="btn btn-success mt-3"type="submit">{% trans "Sign Up" %} &raquo;</button>
+</form>
