--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -1,16 +1,37 @@
 {% extends "account/base.html" %}
-
+{% load static %}
+{% load crispy_forms_tags %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <h1>{% trans "Change Password" %}</h1>
-
+<div class = "col-12 col-lg-4 d-flex flex-column mt-5 p-3 auth-pages-border bg-light">
+    <div class="w-100 d-flex align-items-center">
+  <h1 class = "fs-3 text-uppercase w-75">{% trans "Change Password" %}</h1>
+  <img class = "w-25" src="{% static 'img/form-logo.webp' %}" alt="scubasport logo">
+  </div>
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
+        {{ form | crispy }}
+        <button class = "btn btn-primary mt-3" type="submit" name="action">{% trans "Change Password" %}</button><br>
         <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
     </form>
+</div>
 {% endblock %}
+
+
+{% load static %}
+{% load crispy_forms_tags %}
+
+<div class = "d-flex flex-column mt-5 w-50 mx-auto rounded border border-dark p-3">
+  <div class="w-100 d-flex align-items-center">
+<h1 class = "fs-3 text-uppercase w-75">{% trans "Sign Up" %}</h1>
+<img class = "w-25" src="{% static 'img/form-logo.webp' %}" alt="scubasport logo">
+</div>
+
+
+
+
+<button class="btn btn-primary mt-3" type="submit">{% trans "Sign Up" %} &raquo;</button>
+</form>
