--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -1,15 +1,20 @@
 {% extends "account/base.html" %}
-
+{% load static %}
+{% load crispy_forms_tags %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block inner_content %}
-    <h1>{% trans "Set Password" %}</h1>
-
+<div class = "col-12 col-lg-4 d-flex flex-column mt-5 p-3 auth-pages-border bg-light">
+    <div class="w-100 d-flex align-items-center">
+      <h1 class = "fs-3 text-uppercase w-75">{% trans "Set Password" %}</h1>
+      <img class = "w-25" src="{% static 'img/form-logo.webp' %}" alt="scubasport logo">
+      </div>
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
+        {{ form | crispy }}
+        <input class="btn btn-primary mt-3" type="submit" name="action" value="{% trans 'Set Password' %}"/>
     </form>
+    </div>
 {% endblock %}
