--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -1,11 +1,33 @@
 {% extends "account/base.html" %}
-
+{% load static %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
 {% block inner_content %}
-<h1>{% trans "Sign Up Closed" %}</h1>
+<div class = "col-12 col-lg-4 d-flex flex-column mt-5 p-3 auth-pages-border bg-light">
+    <div class="w-100 d-flex align-items-center">
+  <h1 class = "fs-3 text-uppercase w-75">{% trans "Sign Up Closed" %}</h1>
+  <img class = "w-25" src="{% static 'img/form-logo.webp' %}" alt="scubasport logo">
+  </div>
 
 <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+</div>
 {% endblock %}
+
+
+
+{% load static %}
+{% load crispy_forms_tags %}
+
+<div class = "d-flex flex-column mt-5 w-50 mx-auto rounded border border-dark p-3">
+  <div class="w-100 d-flex align-items-center">
+<h1 class = "fs-3 text-uppercase w-75">{% trans "Sign Up" %}</h1>
+<img class = "w-25" src="{% static 'img/form-logo.webp' %}" alt="scubasport logo">
+</div>
+
+
+
+
+<button class="btn btn-primary mt-3" type="submit">{% trans "Sign Up" %} &raquo;</button>
+</form>
