--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -4,8 +4,12 @@
 
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Verify Your E-mail Address" %}</h1>
+{% block inner_content %}
+<div class = "col-12 col-lg-4 d-flex flex-column mt-5 p-3 auth-pages-border bg-light">
+    <div class="w-100 d-flex align-items-center">
+  <h1 class = "fs-3 text-uppercase w-75">{% trans "Verify Your E-mail Address" %}</h1>
+  <img class = "w-25" src="{% static 'img/form-logo.webp' %}" alt="scubasport logo">
+  </div>
 
 {% url 'account_email' as email_url %}
 
@@ -19,5 +23,5 @@ contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
 
 <p>{% blocktrans %}<strong>Note:</strong> you can still <a href="{{ email_url }}">change your e-mail address</a>.{% endblocktrans %}</p>
 
-
+</div>
 {% endblock %}
