fix order_by to friendly name

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item height-85 active">
-            <!-- Image Oleksandr Sushko unsplash -->
+            <!-- Images Oleksandr Sushko unsplash -->
             <img src="{% static 'img/learn-to-scuba-home.jpg' %}" class="d-block w-100" alt="dolphins with coral">
         </div>
         <div class="carousel-item height-85">
@@ -68,7 +68,7 @@
                 <div class="card-body">
                   <h5 class="card-title">PRO DIVING COURSES</h5>
                   <p class="card-text">Work the dream...</p>
-                  <a href="{% url 'course_list' %}?level__iexact=professional" class="btn btn-primary">Go Pro</a>
+                  <a href="{% url 'course_list' %}?level__iexact=professional" alt="pro-diving" class="btn btn-primary">Go Pro</a>
                 </div>
               </div>
         </div>
