--- a/static/css/base.css
+++ b/static/css/base.css
@@ -427,8 +427,8 @@ input[type=number] {
         border-radius: 25px;
     }
     .auth-background{
-        background-image: url(../img/dive-shop-sign-in.jpg);
-        background-position: center bottom;
+        background-image: url(../img/dive-shop-sign-in.webp);
+        background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
     }
