--- a/templates/403.html
+++ b/templates/403.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 {% block content %}
-
 <div class="container content">
     <div class="row">
       <div class="col">
@@ -12,8 +11,7 @@
       </div>
     </div>
 </div>
-
-<div class="container d-flex flex-column align-items-center content justify-content-center content">
+<div class="container d-flex flex-column align-items-center content justify-content-center">
 <p>You are not authorised to access this space</p>
 <p>Return <a href = "{% url 'home' %}">HOME</a></p>
 </div>
