--- a/templates/includes/info.html
+++ b/templates/includes/info.html
@@ -2,7 +2,7 @@
   <div class="toast toast-info" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="toast-header">
       <strong class="mr-auto">INFO</strong>
-      <button type="button" class="ms-auto close" data-bs-dismiss="toast" aria-label="Close">
+      <button type="button" class="ms-auto btn-secondary btn close" data-bs-dismiss="toast" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
