--- a/templates/includes/success.html
+++ b/templates/includes/success.html
@@ -2,7 +2,7 @@
 <div class="toast toast-success" role="alert" aria-live="assertive" aria-atomic="true">
   <div class="toast-header">
     <strong class="mr-auto">SUCCESS</strong>
-    <button type="button" class="ms-auto close" data-bs-dismiss="toast" aria-label="Close">
+    <button type="button" class="ms-auto btn btn-secondary close" data-bs-dismiss="toast" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
