--- a/templates/includes/warning.html
+++ b/templates/includes/warning.html
@@ -2,7 +2,7 @@
   <div class="toast toast-warning" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="toast-header">
       <strong class="mr-auto">WARNING</strong>
-      <button type="button" class="ms-auto close" data-bs-dismiss="toast" aria-label="Close">
+      <button type="button" class="ms-auto btn btn-secondary rounded-circle close" data-bs-dismiss="toast" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
